k8s/namespaces/n8n/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ui
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - n8n.colinbruner.com
    secretName: n8n-tls
  rules:
  - host: n8n.colinbruner.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n-ui
            port:
              number: 5678
